Footer and README changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <h2>The page you are looking for might be removed or is temporarily unavailable</h2>
                 <button><p>Back to homepage</p></button>
             </div>   
-        </main>
-    </div>      
+            </main>
+        </div>   
+        <footer>
+            <p>created by Kubskyy007 - devCHallanges.io</p>
+        </footer>   
 </body>
 </html>
